# SnakesAndSnakes

./: .gitignore  CMakeLists.txt  CMakePresets.json  index.html
Client/: app.js  style.css
Server/: CMakeLists.txt  Main.cpp  Main.h  Point.h  Room.cpp  Room.h  RoomList.cpp  RoomList.h  Snake.cpp  Snake.h  SnakeGame.cpp  SnakeGame.h  Utils.cpp  Utils.h  WebSocketController.cpp  WebSocketController.h
